<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="lang"
            type="String" />
        <variable
            name="itemModel"
            type="com.creative.share.apps.wash_squad.models.ItemToUpload" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:contentPadding="8dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@color/white"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray5"
                        android:textSize="14sp"
                        android:text="@string/user_name"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|end"
                        android:textColor="@color/gray5"
                        android:textSize="14sp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@{itemModel.user_name}"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray5"
                        android:textSize="14sp"
                        android:text="@string/phone"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|end"
                        android:textColor="@color/gray5"
                        android:textSize="14sp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@{itemModel.user_phone}"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray5"
                        android:textSize="14sp"
                        android:text="@string/car_type"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|end"
                        android:textColor="@color/gray5"
                        android:textSize="14sp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text='@{lang.equals("ar")?itemModel.ar_car_type:itemModel.en_car_type}'
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray5"
                        android:textSize="14sp"
                        android:text="@string/service_type"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|end"
                        android:textColor="@color/gray5"
                        android:textSize="14sp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text='@{lang.equals("ar")?itemModel.ar_service_type:itemModel.en_service_type}'
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray5"
                        android:textSize="14sp"
                        android:text="@string/service_price"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|end"
                        android:textColor="@color/gray5"
                        android:textSize="14sp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text='@{itemModel.service_price+" "+@string/sar}'

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray5"
                        android:textSize="14sp"
                        android:text="@string/payment"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|end"
                        android:textColor="@color/gray5"
                        android:textSize="14sp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@{itemModel.payment_method==1?@string/cache:@string/mada}"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/additional_services"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray5"
                    android:layout_marginTop="5dp"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    >
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        >
                    </androidx.recyclerview.widget.RecyclerView>

                    <TextView
                        android:id="@+id/tvNoAdditionalServices"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray5"
                        android:textSize="13sp"
                        android:layout_marginTop="5dp"
                        android:text="@string/no_additional_services"
                        android:visibility="gone"
                        />
                </FrameLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray5"
                    android:layout_marginTop="5dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray5"
                        android:textSize="14sp"
                        android:text="@string/total"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|end"
                        android:textColor="@color/gray5"
                        android:textSize="14sp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text='@{itemModel.total_price+" "+@string/sar}'
                        />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@drawable/btn_send"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/send_order"
            />
    </LinearLayout>
</layout>