<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >
    <data>
        <variable
            name="backListener"
            type="com.creative.share.apps.wash_squad.interfaces.Listeners.BackListener" />
        <variable
            name="lang"
            type="String" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities_fragments.activity_choose_order_type.ChooseOrderTypeActivity"
        android:background="@color/gray0"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onClick="@{()->backListener.back()}"
                >
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_arrow_left"
                    android:tint="@color/white"
                    android:padding="8dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    />
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/white"
                    android:clickable="false"
                    android:longClickable="false"
                    android:textSize="18sp"
                    android:text="@string/back"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/btnDon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:text="@string/done"
                android:visibility="gone"
                />
        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:text="@string/am"
                        android:layout_gravity="center_vertical"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recViewAm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        >

                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:text="@string/pm"
                        android:layout_gravity="center_vertical"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recViewPm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        >

                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/llNoItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:gravity="center"
                android:visibility="gone"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/no_items_to_display"
                    />
            </LinearLayout>
            <ProgressBar
                android:id="@+id/progBar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
