<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray0">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >

                    </androidx.recyclerview.widget.RecyclerView>


                    <Button
                        android:id="@+id/btnOtherOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/expand_bg"
                        android:text="@string/add_another_order"
                        android:paddingLeft="80dp"
                        android:paddingRight="80dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="17sp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="center_horizontal"
                        android:visibility="gone"
                        />
                </LinearLayout>



                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@drawable/ic_cart"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/gray5"
                        android:textSize="17sp"
                        android:text="@string/empty_cart"
                        />

                    <Button
                        android:id="@+id/btnOrderNow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/expand_bg"
                        android:text="@string/order_now"
                        android:paddingLeft="80dp"
                        android:paddingRight="80dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="17sp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        />

                </LinearLayout>

            </FrameLayout>

        </androidx.core.widget.NestedScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
